--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,20 +8,20 @@
 :root {
   /* COLORS  */
   /* primary */
-  --primary-0: #f0efff;
-  --primary-50: #d8d6ff;
-  --primary-100: #c1beff;
-  --primary-200: #aaa5ff;
-  --primary-300: #938dff;
-  --primary-400: #7b74ff;
+  --primary-0: #b3efe0;
+  --primary-50: #99ead5;
+  --primary-100: #80e5cb;
+  --primary-200: #66e0c1;
+  --primary-300: #4ddbb6;
+  --primary-400: #33d5ac;
   /* main */
-  --primary-500: #645cff;
-  --primary-600: #554ed9;
-  --primary-700: #4640b3;
-  --primary-800: #37338c;
-  --primary-900: #282566;
-  --primary-1000: #191740;
-  --primary-1100: #0a0919;
+  --primary-500: #1ad0a1;
+  --primary-600: #00cb97;
+  --primary-700: #00cb97;
+  --primary-800: #00a279;
+  --primary-900: #007a5b;
+  --primary-1000: #00513c;
+  --primary-1100: #00291e;
   /* grey */
   --grey-0: #fafbfc;
   --grey-50: #f2f4f8;
