--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -499,6 +499,7 @@ form > *:last-child {
 .about-img {
   border-radius: var(--borderRadius);
   height: 500px;
+  box-shadow: 2px 2px 8px #333;
 }
 
 @media screen and (min-width: 992px) {
