--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -227,6 +227,11 @@ button.block {
   width: 100%;
 }
 
+/* HTML entities */
+.entity-pepper {
+  color: #711c1b;
+}
+
 /* Basic Classes */
 .alert {
   padding: 0.375rem 0.75rem;
@@ -506,7 +511,7 @@ form > *:last-child {
   .about-page {
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    height: 400px;
+    height: 27rem;
   }
   .about-img {
     height: 100%;
@@ -566,6 +571,18 @@ form > *:last-child {
   display: grid;
   gap: 2rem 1rem;
   padding-bottom: 3rem;
+}
+
+.recipes-list h5,
+.recipes-list p {
+  color: #333;
+  margin-bottom: 0.1rem;
+  text-align: center;
+}
+
+.recipes-list h5 {
+  font-weight: 600;
+  padding-bottom: 0.5rem;
 }
 .tags-container {
   order: 1;
